--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div id="buttons"></div>
+    <div class="btn btn-primary"></div>
+    <div id="gifs"></div>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" charset="utf-8"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="app.js" charset="utf-8"></script>
   </body>
