--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="buttons"></div>
-    <div class="btn btn-primary"></div>
+    <ul id="buttons"></ul>
+    <!-- <div id="buttons"></div> -->
     <div id="gifs"></div>
+
+
     <input id="search" type="text" placeholder="Please type in a topic ..."><span id="submit"class='btn btn-primary'>Submit</span>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" charset="utf-8"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
