Replaced button input had issues with previous input button form

--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
     <ul id="buttons"></ul>
     <!-- <div id="buttons"></div> -->
 
-    <form class="form-inline">
-      <div class="form-group">
+
+      <!-- <div class="form-group">
         <label class="sr-only" for="exampleInputAmount">Topic .....</label>
         <div class="input-group">
           <input id="search" type="text" class="form-control" id="exampleInputAmount" placeholder="Enter Topic ...">
         </div>
       </div>
-      <button id="submit" type="submit" class="btn btn-primary">Submit</button>
-    </form>
+      <button id="submit" type="submit" class="btn btn-primary">Submit</button> -->
+
+      <div class="input-group">
+        <input id="search"type="text" class="form-control" placeholder="Search for...">
+        <span class="input-group-btn">
+          <button id="submit"class="btn btn-primary" type="button">Go!</button>
+        </span>
+      </div><!-- /input-group -->
 
     <div id="gifs"></div>
 
