Thumbnail design for gifs implemented

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       </div>
 
     <div id="gifs"></div>
+    <div id="thumbnails" class="row"></div>
+
 
 
     <!-- <input id="search" type="text" placeholder="Please type in a topic ..."><span id="submit"class='btn btn-primary'>Submit</span> -->
