--- a/index.html
+++ b/index.html
@@ -5,20 +5,40 @@
     <title>Gif Tastic</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Reenie+Beanie" rel="stylesheet">
+    <link rel="stylesheet" href="tv.css">
     <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
-    <ul id="buttons"></ul>
-      <div class="input-group">
-        <input id="search"type="text" class="form-control" placeholder="Search for...">
-        <span class="input-group-btn">
-          <button id="submit"class="btn btn-primary" type="button">Go!</button>
-        </span>
+
+
+    <div id="container">
+      <div class="jumbotron">
+        <div class="row">
+          <div class="col-sm-8">
+            <ul id="buttons"></ul>
+          </div>
+          <div class="col-sm-3 col-sm-off-1">
+            <div id="searchBox"class="input-group">
+              <input id="search"type="text" class="form-control" placeholder="Search for...">
+              <span class="input-group-btn">
+                <button id="submit"class="btn btn-primary" type="button">Go!</button>
+              </span>
+            </div>
+          </div>
+        </div>
+
+
       </div>
 
-    <div id="gifs"></div>
-    <div id="thumbnails" class="row"></div>
 
+      <div class="container">
+        <div id="gifs"></div>
+        <div id="thumbnails" class="row">
+      </div>
+
+      </div>
+    </div>
 
 
     <!-- <input id="search" type="text" placeholder="Please type in a topic ..."><span id="submit"class='btn btn-primary'>Submit</span> -->
